--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,3 +1,3 @@
-- name: 케미스트리
-  email: changeme@chemistryx.me
-  image: /assets/images/profile/chemistryx.png
+- name: Jieun Heo 
+  email: jieunheo@alum.calarts.edu
+  image: /assets/images/profile/heoji.png
